[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kdt"
description = "All-in-One tooling for developing with Python."
authors = [
    {name = "Keenan W. Wilkinson", email = "keenanwilkinson@outlook.com"}
]
license = { text = "MIT" }
dynamic = ["version", "dependencies"]

[project.scripts]
kdt = "kdt:main_cli"

[options]
exclude = ["tests"]

[tool.setuptools.dynamic]
version = { attr = "kdt.__version__" }
dependencies = { file = "requirements.txt" }
